log
Thu, Sep 18, 2025  4:55:15 PM: 
 treemap.c | 63 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++---
 1 file changed, 60 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'removeNode':
treemap.c:102:13: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
     if(tree = NULL || node == NULL){
             ^
treemap.c:102:5: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
     if(tree = NULL || node == NULL){
     ^~
cc1.exe: all warnings being treated as errors
5729e4d
Thu, Sep 18, 2025  4:56:43 PM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|5
total_score: 15/70
173b01f
